# learnRust

./: .gitignore  README.md
Book6Enum/: Cargo.toml
Book6Enum/src/: shape.rs
RustDailyPractice/20250303/CommandProcessor/: Cargo.toml
RustDailyPractice/20250303/MessageSystem/: Cargo.toml
RustDailyPractice/20250303/ShapeCalculator/: Cargo.toml
RustDailyPractice/20250304/CommandParser/: Cargo.toml
RustDailyPractice/20250304/UserLookup/: Cargo.toml
RustDailyPractice/20250304/WeatherApp/: Cargo.toml
RustDailyPractice/20250309/: practices.md
RustDailyPractice/20250309/task_mgmt/: Cargo.toml  takeaway.md
RustDailyPractice/20250309/task_mgmt_seperate_files/: Cargo.toml
RustDailyPractice/20250314/: chpt8_collections_assessment_part1.md
RustDailyPractice/20250315/: chpt8_collections_assessment_part2.md  chpt8_collections_assessment_part3.md  chpt9_error_handling_assessment_part1.md
The Book/Chpt6_Enums_and_Pattern_Matching/: Takeaways.md
The Book/Chpt7_Packages_Crates_Modules_Paths_Visibility/restaurant/: notes.md
binary_search/src/: main.rs
cli_task_mgr/: Cargo.toml  task.json
cli_task_mgr/src/: main.rs
enum_project/src/: main.rs
guessing_game/src/: main.rs
hello_world/src/: main.s
loops/src/: main.rs
ownership/src/: .main.rs.swp  main.rs
slice/src/: main.rs
src/: .main.rs.swp
task_mgr_gui/task_mgr_gui/: package-lock.json  package.json
task_mgr_gui/task_mgr_gui/src-tauri/: Cargo.toml  tauri.conf.json
task_mgr_gui/task_mgr_gui/src-tauri/src/: main.rs  task_manager.rs
wasm/: Cargo.toml  index.html
(+14 files in other folders)
